--- a/website/newsletter/254/index.mdx
+++ b/website/newsletter/254/index.mdx
@@ -14,9 +14,9 @@ In the previous issue, we covered the first day of React Conf, but when it comes
 
 Aside from React conf announcements, Next.js 16 has been released in beta, and Remix 3 has been introduced.
 
-Let’s go\!
+Also check our partner conf 🇬🇧 [React Native London](https://www.reactnativelondon.co.uk/?utm_source=thisweekinreact) on 13-14 Nov, and make sure to claim a 10% discount with our usual code "TWIR".
 
-- INTRO:  [RNLConf](https://www.reactnativelondon.co.uk/?utm_source=thisweekinreact) -  London - 13-14 Nov.
+Let’s go\!
 
 <!-- truncate -->
 
