--- a/website/newsletter/254/index.mdx
+++ b/website/newsletter/254/index.mdx
@@ -53,13 +53,13 @@ Originally built to power AG Grid’s Integrated Charts, it now serves over **1M
 
 A new major version of Next.js got released in beta. This is the best time to try the newest features and share the feedback with the team. Highlights for this release include:
 
-- Turbopack (stable): enabled by default. Promised to be up to 5-10x faster Fast Refresh, and 2-5x faster builds.
-- Turbopack file system caching (beta): Faster startup and compile times
-- React Compiler Support (stable): need to be manually enabled
+- Turbopack (stable): Enabled by default. Promised to be up to 5-10x faster Fast Refresh, and 2-5x faster builds.
+- Turbopack file system caching (beta): Faster startup and compile times.
+- React Compiler Support (stable): Need to be manually enabled.
 - Optimized navigations and prefetching: Prefetching multiple URLs that share a layout now downloads that layout only once which cuts down on network transfer size.
-- Improved Caching APIs: New `updateTag()` and refined `revalidateTag()`
-- Build Adapters API (alpha): Create custom adapters to modify the build process
-- React 19.2: `<Activity>`, View Transitions, `useEffectEvent`
+- Improved Caching APIs: New `updateTag()` and refined `revalidateTag()`.
+- Build Adapters API (alpha): Create custom adapters to modify the build process.
+- React 19.2: `<Activity>`, View Transitions, `useEffectEvent`.
 
 ---
 
