--- a/website/newsletter/254/index.mdx
+++ b/website/newsletter/254/index.mdx
@@ -3,7 +3,6 @@ slug: /254
 title: "This Week In React #254: Next.js, Remix, Compiler, Async React, TanStack, Cloudflare, Hook Form, Conform | VirtualView, DevTools, Screens, Radon, Harness, Audio API, Uniwind, Nitro | Bun, Oxlint, Vite, View Transitions"
 authors: [kacperkapusciak, piaskowyk]
 date: 10-15-2025
-unlisted: true
 ---
 
 Hi everyone\! Krzysztof and Kacper from Software Mansion here\! 👋
@@ -49,7 +48,7 @@ Originally built to power AG Grid’s Integrated Charts, it now serves over **1M
 
 ![Next.js 16 beta](/emails/issues/254/nextjs-16-beta.png)
 
-[Next.js 16 beta](https://nextjs.org/blog/next-16-beta%20)
+**[Next.js 16 beta](https://nextjs.org/blog/next-16-beta%20)**
 
 A new major version of Next.js got released in beta. This is the best time to try the newest features and share the feedback with the team. Highlights for this release include:
 
@@ -63,7 +62,9 @@ A new major version of Next.js got released in beta. This is the best time to tr
 
 ---
 
-🎥 [Remix Jam 2025 \- Introducing Remix 3](https://www.youtube.com/watch?v=xt_iEOn2a6Y&t=11764s)
+![Remix v3 basic component](/emails/issues/254/remix.jpg)
+
+🎥 **[Remix Jam 2025 \- Introducing Remix 3](https://www.youtube.com/watch?v=xt_iEOn2a6Y&t=11764s)**
 
 Ryan and Micheal introduced for the very first time Remix v3 in a 3h+ conf talk, and Seb watched it all so that you don’t have to. This new major version does not use React anymore, but we think it still deserves to be featured here. It’s not even in alpha yet, but still worth exploring.
 
